# tenzro-edge

./: .gitignore  Cargo.toml  NOTICE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/tenzro-edge-cli/: Cargo.toml
crates/tenzro-edge-cli/src/: main.rs
crates/tenzro-edge-core/: Cargo.toml
crates/tenzro-edge-core/src/: agent_invoker.rs  agent_registry.rs  attester.rs  auth.rs  broker.rs  client.rs  discovery.rs  dpop_rpc.rs  lib.rs  model_source.rs  receipt_sink.rs  remote_inference.rs  storage_backend.rs  work_settlement.rs
