# SPDX-License-Identifier: Apache-2.0

[package]
name = "tenzro-edge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "`tenzro-edge` CLI"

[[bin]]
name = "tenzro-edge"
path = "src/main.rs"

[dependencies]
tenzro-edge-core = { path = "../tenzro-edge-core" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
anyhow.workspace = true

[lints]
workspace = true
